@@ -1,4 +1,4 @@
-Copyright (c) 2007 Elloy Duran and Justin Palmer
+Copyright (c) 2007 Eloy Duran and Justin Palmer
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
