@@ -37,7 +37,7 @@
     </div>
     <%= body %>
     <p class="coda">
-      <a href="FIXME email">FIXME full name</a>, <%= modified.pretty %><br>
+      <a href="http://groups.google.com/group/rucola">Eloy Duran, Justin Palmer</a>, <%= modified.pretty %><br>
       Theme extended from <a href="http://rb2js.rubyforge.org/">Paul Battley</a>
     </p>
 </div>
